--- a/pokedex.html
+++ b/pokedex.html
@@ -21,8 +21,8 @@
   </head>
 
   <body>
-    <div class="jumbotron">
-      <h3><img src="images/logo.png" width="150vh">ONLINE</h3>
+    <div class="titulo">
+      <h3><img src="images/logo.png" width="150vh">online</h3><br>
     </div>
 
     </div>
@@ -68,14 +68,15 @@
               <input class="cositonaranja" type="button"></input>
             </div>
             <div class="flechas">
-              <button class="flechanegra" type="button">🔼</button><br>
+              <button class="flechanegra" type="button" onclick="incrementarPokemon()">🔼</button><br>
               <button class="flechanegra" type="button"></button>
               <button class="flechanegra" type="button"></button>
               <button class="flechanegra" type="button"></button><br>
-              <button class="flechanegra" type="button">🔽</button>
+              <button class="flechanegra" type="button" onclick="decrementarPokemon()">🔽</button>
             </div>
           </div>
         </div>
+
         <div class="derecha">
           <div class="arriba">
           </div>
